CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
FIND_PACKAGE(Boost)
set(PULSEWAVES_INCLUDES_DIR ${PROJECT_SOURCE_DIR}/includes)
include_directories( ${Boost_INCLUDE_DIRS} ) 
include_directories( ${PULSEWAVES_INCLUDES_DIR} )
link_directories( ${PULSEWAVES_SOURCE_DIR}/src)
add_executable(pulsewaves PulseWaves.cpp cVlr.cpp main.cpp ../includes/PulseWaves.hpp ../includes/PulseWavesDefs.hpp ../includes/cVlr.hpp)
target_link_libraries(pulsewaves ${Boost_LIBRARY_DIR})